# CV-Lab

./: .gitignore  README.md
Lab1/: CMakeLists.txt
Lab1/task1/: CMakeLists.txt  main.cpp
Lab1/task2/: CMakeLists.txt  main.cpp
Lab1/task3/: CMakeLists.txt  main.cpp
Lab1/task4/: CMakeLists.txt  main.cpp
Lab1/task5/: CMakeLists.txt  main.cpp
Lab1/task6/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt
Lab2/include/: ImageFilters.cpp  ImageFilters.h  myutils.cpp  myutils.h
Lab2/task1/: CMakeLists.txt  main.cpp
Lab2/task2/: CMakeLists.txt  ImageFilters.cpp  ImageFilters.h  main.cpp
Lab2/task3/: CMakeLists.txt  ImageFilters.cpp  ImageFilters.h  main.cpp
Lab2/task4/: CMakeLists.txt  main.cpp
Lab3/: CMakeLists.txt
Lab3/include/: ImageFilters.cpp  ImageFilters.h  myutils.cpp  myutils.h
Lab3/task1/: CMakeLists.txt  main.cpp
Lab3/task2/: CMakeLists.txt  main.cpp
